--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -3,64 +3,64 @@
   font-family: 'Dosis ExtraLight';
   font-style: normal;
   font-weight: 200;
-  src: url(http://themes.googleusercontent.com/static/fonts/dosis/v1/ObbIOKT7x5q3tD-LZ0O70fesZW2xOQ-xsNqO47m55DA.eot);
-  src: local('Dosis ExtraLight'), local('Dosis-ExtraLight'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/ObbIOKT7x5q3tD-LZ0O70fesZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/05xr33FHwecUTIADg28rEfesZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/zuuDDmIlQfJeEM3Uf6kkpvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
+  src: url(//themes.googleusercontent.com/static/fonts/dosis/v1/ObbIOKT7x5q3tD-LZ0O70fesZW2xOQ-xsNqO47m55DA.eot);
+  src: local('Dosis ExtraLight'), local('Dosis-ExtraLight'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/ObbIOKT7x5q3tD-LZ0O70fesZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/05xr33FHwecUTIADg28rEfesZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/zuuDDmIlQfJeEM3Uf6kkpvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Dosis Light';
   font-style: normal;
   font-weight: 300;
-  src: url(http://themes.googleusercontent.com/static/fonts/dosis/v1/piAeziXdjUmpEWux15l7q_esZW2xOQ-xsNqO47m55DA.eot);
-  src: local('Dosis Light'), local('Dosis-Light'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/piAeziXdjUmpEWux15l7q_esZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/0b3R8ORT0i9mlMGM3BxXF_esZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/GpmMKE0dnXylect5ObzLR_esZW2xOQ-xsNqO47m55DA.woff) format('woff');
+  src: url(//themes.googleusercontent.com/static/fonts/dosis/v1/piAeziXdjUmpEWux15l7q_esZW2xOQ-xsNqO47m55DA.eot);
+  src: local('Dosis Light'), local('Dosis-Light'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/piAeziXdjUmpEWux15l7q_esZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/0b3R8ORT0i9mlMGM3BxXF_esZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/GpmMKE0dnXylect5ObzLR_esZW2xOQ-xsNqO47m55DA.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Dosis Regular';
   font-style: normal;
   font-weight: 400;
-  src: url(http://themes.googleusercontent.com/static/fonts/dosis/v1/RHp5spKuj-AQOgQKPITXrQ.eot);
-  src: local('Dosis Regular'), local('Dosis-Regular'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/RHp5spKuj-AQOgQKPITXrQ.eot) format('embedded-opentype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/guC5lwT5Dw7anV_xfpCGqw.ttf) format('truetype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/xIAtSaglM8LZOYdGmG1JqQ.woff) format('woff');
+  src: url(//themes.googleusercontent.com/static/fonts/dosis/v1/RHp5spKuj-AQOgQKPITXrQ.eot);
+  src: local('Dosis Regular'), local('Dosis-Regular'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/RHp5spKuj-AQOgQKPITXrQ.eot) format('embedded-opentype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/guC5lwT5Dw7anV_xfpCGqw.ttf) format('truetype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/xIAtSaglM8LZOYdGmG1JqQ.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Dosis Medium';
   font-style: normal;
   font-weight: 500;
-  src: url(http://themes.googleusercontent.com/static/fonts/dosis/v1/ELvCmRUbtOdCk3jbD-FqUPesZW2xOQ-xsNqO47m55DA.eot);
-  src: local('Dosis Medium'), local('Dosis-Medium'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/ELvCmRUbtOdCk3jbD-FqUPesZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/obisuY-MenYRAFwd-r2NhfesZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/A4RWZsncmJ25G8iqn2EHN_esZW2xOQ-xsNqO47m55DA.woff) format('woff');
+  src: url(//themes.googleusercontent.com/static/fonts/dosis/v1/ELvCmRUbtOdCk3jbD-FqUPesZW2xOQ-xsNqO47m55DA.eot);
+  src: local('Dosis Medium'), local('Dosis-Medium'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/ELvCmRUbtOdCk3jbD-FqUPesZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/obisuY-MenYRAFwd-r2NhfesZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/A4RWZsncmJ25G8iqn2EHN_esZW2xOQ-xsNqO47m55DA.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Dosis SemiBold';
   font-style: normal;
   font-weight: 600;
-  src: url(http://themes.googleusercontent.com/static/fonts/dosis/v1/cP5EXqzXauRrjnP79eZ-MPesZW2xOQ-xsNqO47m55DA.eot);
-  src: local('Dosis SemiBold'), local('Dosis-SemiBold'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/cP5EXqzXauRrjnP79eZ-MPesZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/URSgP3aplSko3CQAzdXHwPesZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/f8qltGyj2S-SS_tsOHsjgfesZW2xOQ-xsNqO47m55DA.woff) format('woff');
+  src: url(//themes.googleusercontent.com/static/fonts/dosis/v1/cP5EXqzXauRrjnP79eZ-MPesZW2xOQ-xsNqO47m55DA.eot);
+  src: local('Dosis SemiBold'), local('Dosis-SemiBold'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/cP5EXqzXauRrjnP79eZ-MPesZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/URSgP3aplSko3CQAzdXHwPesZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/f8qltGyj2S-SS_tsOHsjgfesZW2xOQ-xsNqO47m55DA.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Dosis Bold';
   font-style: normal;
   font-weight: 700;
-  src: url(http://themes.googleusercontent.com/static/fonts/dosis/v1/tyj4dcX-j2M0ERUlmIDlrvesZW2xOQ-xsNqO47m55DA.eot);
-  src: local('Dosis Bold'), local('Dosis-Bold'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/tyj4dcX-j2M0ERUlmIDlrvesZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/Luunk03-uSz9LnB7oNEUuvesZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/x-7NZTw0n-ypOAaIE8uSrvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
+  src: url(//themes.googleusercontent.com/static/fonts/dosis/v1/tyj4dcX-j2M0ERUlmIDlrvesZW2xOQ-xsNqO47m55DA.eot);
+  src: local('Dosis Bold'), local('Dosis-Bold'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/tyj4dcX-j2M0ERUlmIDlrvesZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/Luunk03-uSz9LnB7oNEUuvesZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/x-7NZTw0n-ypOAaIE8uSrvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Dosis ExtraBold';
   font-style: normal;
   font-weight: 800;
-  src: url(http://themes.googleusercontent.com/static/fonts/dosis/v1/mPoGKQuC65tedUakfBsfBfesZW2xOQ-xsNqO47m55DA.eot);
-  src: local('Dosis ExtraBold'), local('Dosis-ExtraBold'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/mPoGKQuC65tedUakfBsfBfesZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/T4JvHtpMHbjlr73o1YLMo_esZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/k9xA3bmr7wstksq4xsFJafesZW2xOQ-xsNqO47m55DA.woff) format('woff');
+  src: url(//themes.googleusercontent.com/static/fonts/dosis/v1/mPoGKQuC65tedUakfBsfBfesZW2xOQ-xsNqO47m55DA.eot);
+  src: local('Dosis ExtraBold'), local('Dosis-ExtraBold'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/mPoGKQuC65tedUakfBsfBfesZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/T4JvHtpMHbjlr73o1YLMo_esZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/k9xA3bmr7wstksq4xsFJafesZW2xOQ-xsNqO47m55DA.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Dosis';
   font-style: normal;
   font-weight: 800;
-  src: url(http://themes.googleusercontent.com/static/fonts/dosis/v1/mPoGKQuC65tedUakfBsfBfesZW2xOQ-xsNqO47m55DA.eot);
-  src: local('Dosis ExtraBold'), local('Dosis-ExtraBold'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/mPoGKQuC65tedUakfBsfBfesZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/T4JvHtpMHbjlr73o1YLMo_esZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(http://themes.googleusercontent.com/static/fonts/dosis/v1/k9xA3bmr7wstksq4xsFJafesZW2xOQ-xsNqO47m55DA.woff) format('woff');
+  src: url(//themes.googleusercontent.com/static/fonts/dosis/v1/mPoGKQuC65tedUakfBsfBfesZW2xOQ-xsNqO47m55DA.eot);
+  src: local('Dosis ExtraBold'), local('Dosis-ExtraBold'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/mPoGKQuC65tedUakfBsfBfesZW2xOQ-xsNqO47m55DA.eot) format('embedded-opentype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/T4JvHtpMHbjlr73o1YLMo_esZW2xOQ-xsNqO47m55DA.ttf) format('truetype'), url(//themes.googleusercontent.com/static/fonts/dosis/v1/k9xA3bmr7wstksq4xsFJafesZW2xOQ-xsNqO47m55DA.woff) format('woff');
 }
 
 /*Custom Font Dosis*/
