change to iintro

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 
     <div class="log_content">
       <div class="log_top">
-        <h1>Sign up to Open<span>Source</span>Billing</h1>
+        <h1>Sign up to Intro Vietnam</h1>
       </div>
       <!--log_top-->
 
@@ -69,9 +69,7 @@
       <% end %>
 
       <div class="log_footer">
-        <a class="site_link" href="http://opensourcebilling.org">www.opensourcebilling.org</a>
 
-        <p class="team_link">powered by: <a href="http://vteams.com">vteams.com</a></p>
       </div>
 
 
