--- a/app/views/layouts/doorkeeper.html.erb
+++ b/app/views/layouts/doorkeeper.html.erb
@@ -86,9 +86,9 @@
       <div class="footer_container">
         <div class="footer_content">
           <ul>
-            <li class="copy_right">Copyright © 2013 by <a href="http://vteams.com/">vteams</a>. All rights reserved.</li>
+            <li class="copy_right">Copyright © 2013 by <a href="http://intro.vn/">intro.vn</a>. All rights reserved.</li>
             <li class="privacy_policy"><a href="#" class="no_links">Privacy Policy</a></li>
-            <li class="contact_us"><a href="mailto:teena@vteams.com">Contact Us</a></li>
+            <li class="contact_us"><a href="mailto:admin@intro.vn">Contact Us</a></li>
           </ul>
         </div>
       </div>
