change to iintro

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -13,13 +13,13 @@
 <%#= render "devise/shared/links" %>
 
 
-<!------------ New design for forgot passowrd --------------->
+<!------------ New design for forgot passowrd ---------------->
 
 <div class="log_page">
   <div class="log_container">
     <div class="log_content">
       <div class="log_top">
-        <h1>Open<span>Source</span>Billing</h1>
+        <h1>Intro Vietnam</h1>
       </div>
       <!--log_top-->
 
@@ -43,7 +43,7 @@
 
           <div class="log_btm">
             <%= f.submit "Send Password Instructions", :class => "btn_large submit" %>
-            <%= link_to 'Cancel', invoices_path, :class => 'btn_large grey forgot' %>
+            <%= link_to 'Cancel', get_url, :class => 'btn_large grey forgot' %>
           </div>
           <!--log_btm-->
 
