change to iintro

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -43,7 +43,7 @@
 
           <div class="log_btm">
             <%= f.submit "Send Password Instructions", :class => "btn_large submit" %>
-            <%= link_to 'Cancel', destroy_user_session_path, :class => 'btn_large grey forgot' %>
+            <%= link_to 'Cancel', '/', :class => 'btn_large grey forgot' %>
           </div>
           <!--log_btm-->
 
