--- a/app/views/invoices/preview.html.erb
+++ b/app/views/invoices/preview.html.erb
@@ -23,7 +23,11 @@
 
   <div class="content_bottom top">
     <% if @invoice.status != "paid" %>
+      <% if @invoice.currency_id == 1 %>
+      <a target="_blank" href="https://www.nganluong.vn/button_payment.php?receiver=ksmanhtuong103@gmail.com&product_name=<%= @invoice.invoice_number %>&price=<%= (@invoice.invoice_total - Payment.invoice_paid_amount(@invoice.id))*23000 %>&return_url=https://accounts.intro.vn/en/invoices/preview/?inv_id=<%= @invoice.encrypted_id %>&comments=Thanh toán hoá đơn <%= @invoice.invoice_number %>"><img src="https://www.nganluong.vn/css/newhome/img/button/pay-lg.png"border="0" /></a>
+      <% else %>
       <a target="_blank" href="https://www.nganluong.vn/button_payment.php?receiver=ksmanhtuong103@gmail.com&product_name=<%= @invoice.invoice_number %>&price=<%= (@invoice.invoice_total - Payment.invoice_paid_amount(@invoice.id)) %>&return_url=https://accounts.intro.vn/en/invoices/preview/?inv_id=<%= @invoice.encrypted_id %>&comments=Thanh toán hoá đơn <%= @invoice.invoice_number %>"><img src="https://www.nganluong.vn/css/newhome/img/button/pay-lg.png"border="0" /></a>
+      <% end %>
         <!--showing 2 payment options buttons -->
       <%= link_to t('pay_by_paypal'), @invoice.paypal_url("#{OSB::CONFIG::APP_PROTOCOL}://#{OSB::CONFIG::APP_HOST}/en/invoices/preview/?inv_id=#{@invoice.encrypted_id}", "#{OSB::CONFIG::APP_PROTOCOL}://#{OSB::CONFIG::APP_HOST}/en/invoices/paypal_payments", current_user), :class => "btn_large big" %>
       <%= link_to t("pay_by_credit_card"), "javascript:", class: "btn_large big", "data-toggle" => "modal", "data-target" => "#cc_popup" %>
